shifted to HolyGrail layout(nav has some issue though)

--- a/up/app/static/app/css/sidebar.css
+++ b/up/app/static/app/css/sidebar.css
@@ -1,3 +1,4 @@
+/*
 .wrapper {
     display: flex;
 }
@@ -13,13 +14,8 @@
 
 #sidebar {
     /* don't forget to add all the previously mentioned styles here too */
-    /* どういう規則で分けてる？ */
+    /* どういう規則で分けてる？ 
     color: #fff;
     padding: 20px;
 }
-
-@media (max-width: 1200px) {
-    #sidebar {
-        display:none;
-    }
-}
+*/
